tests/error/function_arg_no_size.gw
function void test(void v){}
